--- a/index.html
+++ b/index.html
@@ -68,23 +68,8 @@
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
-                <li class='tab'>
-                  <a href="#rigidmotors"><span> RigidMotors</span></a>
-                </li>
             </ul>
 	  <!-- End Tab List -->
-
-        <!-- Projects Tab Container -->
-        <div id="tab-container" class="tab-container">
-          <!-- Tab List -->
-            <ul class='etabs'>
-                <li class='tab'>
-                  <a href="#rigidmotors"><span> RigidMotors</span></a>
-                </li>
-            </ul>
-        </div>
-	  <!-- End Project Tabs -->
-
 	    <div id="tab-data-wrap">
               <!-- About Tab Data -->
                 <div id="about">
@@ -105,6 +90,24 @@
                                 </p>
                             </div>
                         </div>
+			 <div class="g1">
+-                            <div class="main-links sidebar">
+-                                <ul>
+-                                    <li>
+-                                        <a href="#rigidmotors">Rigid Motors</a>
+-                                    </li>
+-                                    <li>
+-                                        <a href="#portfolio">My Portfolio</a>
+-                                    </li>
+-                                    <li>
+-                                        <a href="#contact">Hire me for your next project</a>
+-                                    </li>
+-                                    <li>
+-                                        <a href="#features">Features</a>
+-                                    </li>
+-                                </ul>
+-                            </div>
+-                        </div>
                         <div class="break"></div>
                         <div class="contact-info">
                           <div class="g1">
