--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
+                <li class='tab' style="display: none;">
+                  <a href="#rigidmotors"><i class="icon-heart"></i><span> RigidMotors</span></a>
+                </li>
             </ul>
 	  <!-- End Tab List -->
 	    <div id="tab-data-wrap">
@@ -90,24 +93,6 @@
                                 </p>
                             </div>
                         </div>
-			 <div class="g1">
--                            <div class="main-links sidebar">
--                                <ul>
--                                    <li>
--                                        <a href="#resume">View My Resume</a>
--                                    </li>
--                                    <li>
--                                        <a href="#portfolio">My Portfolio</a>
--                                    </li>
--                                    <li>
--                                        <a href="#contact">Hire me for your next project</a>
--                                    </li>
--                                    <li>
--                                        <a href="#features">Features</a>
--                                    </li>
--                                </ul>
--                            </div>
--                        </div>
                         <div class="break"></div>
                         <div class="contact-info">
                           <div class="g1">
