--- a/index.html
+++ b/index.html
@@ -303,13 +303,15 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                             <ul class="no-list work">
                                 <li>
                                     <p>
-                                        Currently working towards a <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a>.<br>
-                                        Minoring in Mathematics.<br>
-                                        GPA: 3.734<br>
-                                        President's List, one semester, Dean's list three semesters<br>
-                                        Trustee Scholar<br>
-                                        Inspiration Scholar<br>
-                                        Recipient of the Mt. Mansfield TV Award
+                                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt dui id tristique consectetur. Morbi arcu odio, lobortis iaculis aliquet ut, aliquam ut tortor. Vestibulum sollicitudin felis urna, at convallis diam posuere et. Suspendisse fermentum volutpat rhoncus. Fusce in sapien nulla. Quisque sit amet rhoncus orci, a euismod tortor. Nam a lorem porttitor enim condimentum accumsan. Nullam tristique tempor justo, vel varius sem venenatis quis. Fusce ac lorem tellus. Morbi ultricies luctus congue. Duis euismod sem sit amet posuere auctor. Sed bibendum turpis nec sem commodo, id varius risus malesuada. In hac habitasse platea dictumst. Aliquam porta nisl nibh, vel molestie urna venenatis ac. Ut sed convallis nibh, at euismod erat.
+
+Ut posuere lorem maximus tristique aliquam. Fusce tempor pellentesque ligula, ac bibendum lacus egestas ut. Mauris vestibulum ex at augue pellentesque, et luctus dui porta. Sed posuere elementum quam, et iaculis ante pharetra vel. Fusce vitae hendrerit massa, id vulputate metus. Praesent efficitur neque sit amet lobortis auctor. In a faucibus sem. Ut ante nisl, condimentum eu ultricies sit amet, aliquet eu elit.
+
+Cras semper bibendum augue eu tempor. Integer felis massa, convallis eu scelerisque eget, aliquam at sem. Nam vehicula condimentum lorem dictum facilisis. Etiam pretium nisi sit amet mauris posuere dignissim. Quisque tempus justo vitae odio porta sodales. Suspendisse efficitur sollicitudin enim quis fringilla. Duis laoreet interdum tellus, at ullamcorper turpis bibendum a. Proin tristique neque neque, eget gravida nunc varius sit amet. Etiam ex tortor, rhoncus sed ipsum quis, euismod dignissim nisi. Cras consequat ultricies fermentum. Nullam vulputate mattis ipsum vitae sollicitudin. Fusce ornare tortor eget lobortis interdum. Nunc lacus ex, laoreet eu condimentum euismod, cursus id tortor. Sed eu sollicitudin libero, eget volutpat sem. Duis non tellus id odio eleifend porttitor. Pellentesque hendrerit mauris ac felis hendrerit consequat.
+
+Cras sit amet orci lacus. Curabitur et erat euismod ante porttitor hendrerit porta sit amet metus. Ut euismod ut neque a interdum. Etiam sit amet ultricies turpis. Ut sed nibh lectus. Curabitur eu libero at felis scelerisque aliquam sit amet a leo. Phasellus tempus felis dolor, et sodales velit ornare sed. Nunc ultrices nunc nulla, luctus ultrices diam vehicula id.
+
+Nam sed erat quis tortor gravida lobortis. Donec nec orci risus. Sed at tempor velit. Etiam convallis ipsum in dui finibus, a efficitur ligula imperdiet. Ut ut leo ullamcorper, dapibus turpis et, pulvinar dui. Duis a pulvinar odio. Etiam dolor nisi, scelerisque et justo in, finibus maximus nunc. Aenean non ullamcorper orci. Quisque velit diam, suscipit sodales augue in, lacinia pulvinar sapien.
                                     </p>
                                 </li>
                             </ul>
