--- a/index.html
+++ b/index.html
@@ -290,23 +290,57 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                     </div>
                                 </div>
                             </div>
-                            <div class="image">
-                                <img src="http://i.imgur.com/zt0h2A8.png" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="#infection" class="btn">Infection</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="image">
-                                <img src="http://i.imgur.com/zt0h2A8.png" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="#viciousorb" class="btn">Vicious Orb</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+			 <div class="g1">
+-                            <div class="image">
+-                                <img src="http://lorempixel.com/306/306/sports/2" alt="">
+-                                <div class="image-overlay">
+-                                    <div class="image-link">
+-                                        <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
+-                                    </div>
+-                                </div>
+-                            </div>
+-                        </div>
+-                        <div class="g1">
+-                            <div class="image">
+-                                <img src="http://lorempixel.com/306/306/sports/3" alt="">
+-                                <div class="image-overlay">
+-                                    <div class="image-link">
+-                                        <a href="http://lorempixel.com/606/606/sports/3" class="btn">Full View</a>
+-                                    </div>
+-                                </div>
+-                            </div>
+-                        </div>
+-                        <div class="break"></div>
+-                        <div class="g1">
+-                            <div class="image">
+-                                <img src="http://lorempixel.com/306/306/sports/4" alt="">
+-                                <div class="image-overlay">
+-                                    <div class="image-link">
+-                                        <a href="http://lorempixel.com/606/606/sports/4" class="btn">Full View</a>
+-                                    </div>
+-                                </div>
+-                            </div>
+-                        </div>
+-                        <div class="g1">
+-                            <div class="image">
+-                                <img src="http://lorempixel.com/306/306/sports/5" alt="">
+-                                <div class="image-overlay">
+-                                    <div class="image-link">
+-                                        <a href="http://lorempixel.com/606/606/sports/5" class="btn">Full View</a>
+-                                    </div>
+-                                </div>
+-                            </div>
+-                        </div>
+-                        <div class="g1">
+-                            <div class="image">
+-                                <img src="http://lorempixel.com/306/306/business/2" alt="">
+-                                <div class="image-overlay">
+-                                    <div class="image-link">
+-                                        <a href="http://lorempixel.com/606/606/business/2" class="btn">Full View</a>
+-                                    </div>
+-                                </div>
+-                            </div>
+-                        </div>
                     </section>
                 </div>
               <!-- End Portfolio Data -->
