--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                 <img src=http://i.imgur.com/QUzhwQ8.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="#rigidmotors" class="btn">Full View</a>
+                                        <a href="#rigidmotors" class="btn">Rigid Motors</a>
                                     </div>
                                 </div>
                             </div>
